--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "kill-port": "^1.6.0",
     "morgan": "~1.9.1",
     "pg": "^8.0.2"
   }
