--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,8 @@
     "kill-port": "^1.6.0",
     "morgan": "~1.9.1",
     "pg": "^8.0.2"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
